@@ -70,23 +70,26 @@ Object Ratnum::sqrtUnsigned(const mpq_t r) const
 
 Object Ratnum::floor() const
 {
-    Bignum temp;
-    mpz_fdiv_q(temp.value_,  mpq_numref(value), mpq_denref(value));
-    return Bignum::makeInteger(temp.value_);
+    mpz_t ret;
+    mpz_init(ret);
+    mpz_fdiv_q(ret,  mpq_numref(value), mpq_denref(value));
+    return Bignum::makeInteger(ret);
 }
 
 Object Ratnum::ceiling() const
 {
-    Bignum temp;
-    mpz_cdiv_q(temp.value_, mpq_numref(value), mpq_denref(value));
-    return Bignum::makeInteger(temp.value_);
+    mpz_t ret;
+    mpz_init(ret);
+    mpz_cdiv_q(ret, mpq_numref(value), mpq_denref(value));
+    return Bignum::makeInteger(ret);
 }
 
 Object Ratnum::truncate() const
 {
-    Bignum temp;
-    mpz_tdiv_q(temp.value_, mpq_numref(value), mpq_denref(value));
-    return Bignum::makeInteger(temp.value_);
+    mpz_t ret;
+    mpz_init(ret);
+    mpz_tdiv_q(ret, mpq_numref(value), mpq_denref(value));
+    return Bignum::makeInteger(ret);
 }
 
 Object Ratnum::round() const
